--- a/monetary_policy_surprises.tex
+++ b/monetary_policy_surprises.tex
@@ -250,6 +250,22 @@ Ipsum
 
 \centering{
 
+\includegraphics{monetary_policy_surprises_files/figure-pdf/fig-repo_rate-1.pdf}
+
+}
+
+\caption{\label{fig-repo_rate}Repo Rate Path}
+
+\end{figure}%
+
+\newpage
+
+\subsection{Repo Rate Changes}\label{repo-rate-changes}
+
+\begin{figure}[H]
+
+\centering{
+
 \includegraphics{monetary_policy_surprises_files/figure-pdf/fig-repo_rate_changes-1.pdf}
 
 }
@@ -259,8 +275,6 @@ Ipsum
 \end{figure}%
 
 \newpage
-
-\subsection{Repo Rate Change Days}\label{repo-rate-change-days}
 
 \global\setlength{\Oldarrayrulewidth}{\arrayrulewidth}
 
@@ -294,19 +308,19 @@ Ipsum
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2010-03-26}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2010-03-25}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2010-09-10}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.0}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2010-09-09}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.0}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2010-11-19}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{5.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2010-11-18}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{5.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
@@ -318,61 +332,61 @@ Ipsum
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2014-01-30}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{5.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2014-01-29}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{5.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2014-07-18}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{5.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2014-07-17}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{5.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2015-07-24}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.0}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2015-07-23}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.0}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2015-11-20}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2015-11-19}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2016-01-29}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2016-01-28}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2016-03-18}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{7.0}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2016-03-17}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{7.0}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2017-07-21}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2017-07-20}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2018-03-29}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2018-03-28}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2018-11-23}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2018-11-22}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2019-07-19}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2019-07-18}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
@@ -402,7 +416,7 @@ Ipsum
 
 
 
-\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2020-07-24}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{3.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2020-07-23}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{3.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{-0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Decrease}}}} \\
 
 \ascline{1pt}{FFFFFF}{1-4}
 
@@ -422,6 +436,48 @@ Ipsum
 
 \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2022-03-25}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{4.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
 
+\ascline{1pt}{FFFFFF}{1-4}
+
+
+
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2022-05-20}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{4.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+
+\ascline{1pt}{FFFFFF}{1-4}
+
+
+
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2022-07-22}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{5.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+
+\ascline{1pt}{FFFFFF}{1-4}
+
+
+
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2022-09-23}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{6.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+
+\ascline{1pt}{FFFFFF}{1-4}
+
+
+
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2022-11-25}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{7.0}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+
+\ascline{1pt}{FFFFFF}{1-4}
+
+
+
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2023-01-27}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{7.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+
+\ascline{1pt}{FFFFFF}{1-4}
+
+
+
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2023-03-31}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{7.8}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+
+\ascline{1pt}{FFFFFF}{1-4}
+
+
+
+\multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.5in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{2023-05-26}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.45in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{8.2}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.93in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{0.5}}}} & \multicolumn{1}{!{\color[HTML]{FFFFFF}\vrule width 1pt}>{\centering}m{\dimexpr 1.66in+0\tabcolsep}!{\color[HTML]{FFFFFF}\vrule width 1pt}}{\textcolor[HTML]{000000}{\fontsize{8}{16}\selectfont{\global\setmainfont{Times New Roman}{Increase}}}} \\
+
 \ascline{0.75pt}{000000}{1-4}
 
 
@@ -434,6 +490,8 @@ Ipsum
 \global\setlength{\tabcolsep}{\Oldtabcolsep}
 
 \renewcommand*{\arraystretch}{1}
+
+\subsection{Exchange rates}\label{exchange-rates}
 
 
 
