--- a/monetary_policy_surprises.tex
+++ b/monetary_policy_surprises.tex
@@ -258,8 +258,6 @@ Ipsum
 
 \end{figure}%
 
-\newpage
-
 \subsection{Daily Repo Rate Changes}\label{daily-repo-rate-changes}
 
 \begin{figure}[H]
@@ -273,8 +271,6 @@ Ipsum
 \caption{\label{fig-repo_rate_changes}Repo Rate Changes}
 
 \end{figure}%
-
-\newpage
 
 \subsection{Announcement Days}\label{announcement-days}
 
@@ -842,6 +838,76 @@ Ipsum
 \renewcommand*{\arraystretch}{1}
 
 \subsection{Exchange rates}\label{exchange-rates}
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{monetary_policy_surprises_files/figure-pdf/fig-exchange_rates-1.pdf}
+
+}
+
+\caption{\label{fig-exchange_rates}Exchange Rates}
+
+\end{figure}%
+
+\subsection{Commodities}\label{commodities}
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{monetary_policy_surprises_files/figure-pdf/fig-commodities-1.pdf}
+
+}
+
+\caption{\label{fig-commodities}Commodities}
+
+\end{figure}%
+
+\subsection{Stock Market}\label{stock-market}
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{monetary_policy_surprises_files/figure-pdf/fig-stock_market-1.pdf}
+
+}
+
+\caption{\label{fig-stock_market}Stock Market}
+
+\end{figure}%
+
+\subsection{Bonds}\label{bonds}
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{monetary_policy_surprises_files/figure-pdf/fig-bonds-1.pdf}
+
+}
+
+\caption{\label{fig-bonds}Bonds}
+
+\end{figure}%
+
+\newpage
+
+\subsection{Foward Rates}\label{foward-rates}
+
+\begin{figure}[H]
+
+\centering{
+
+\includegraphics{monetary_policy_surprises_files/figure-pdf/fig-forward_rates-1.pdf}
+
+}
+
+\caption{\label{fig-forward_rates}Forward Rates}
+
+\end{figure}%
 
 
 
