--- a/monetary_policy_surprises.tex
+++ b/monetary_policy_surprises.tex
@@ -272,6 +272,8 @@ Ipsum
 
 \end{figure}%
 
+\newpage
+
 \subsection{Announcement Days}\label{announcement-days}
 
 \global\setlength{\Oldarrayrulewidth}{\arrayrulewidth}
@@ -895,7 +897,7 @@ Ipsum
 
 \newpage
 
-\subsection{Foward Rates}\label{foward-rates}
+\subsection{Forward Rates}\label{forward-rates}
 
 \begin{figure}[H]
 
